--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -99,7 +99,7 @@ android {
 
     defaultConfig {
         applicationId "com.example"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-randombytes')
+    compile project(':react-native-aes-crypto')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
