--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'example'
+include ':react-native-randombytes'
+project(':react-native-randombytes').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-randombytes/android')
+include ':react-native-aes-crypto'
+project(':react-native-aes-crypto').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-aes-crypto/android')
 
 include ':app'
