--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-aes-crypto": "https://github.com/nagad814/react-native-aes.git"
+    "react-native-aes-crypto": "https://github.com/nagad814/react-native-aes.git",
+    "react-native-randombytes": "^3.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
